# multi-assignment-problems-algorithm-kswap

./: .gitignore  AGENTS.md  CMakeLists.txt  MEMORY.md  Makefile  README.md  build.sh  main1  main1.c  run_all.sh
.context/: project.md  rules.md  tech.md
.itzamna/: constitution.md  kernel.md  memory.md
.itzamna/templates/: agent-template.md  cli-compatibility.md  quality-checklist.md  skill-template.md
.opencode/: ITZAMNA.md
.opencode/command/: itzamna.agent.md  itzamna.code-review.md  itzamna.context.md  itzamna.debug.md  itzamna.implement.md  itzamna.init.md  itzamna.memory.md  itzamna.refactor.md  itzamna.skill.create.md  itzamna.skill.extract.md  itzamna.skill.list.md  itzamna.skill.update.md  itzamna.skill.validate.md  itzamna.status.md  itzamna.test-gen.md
docs/: Algoritmo MAPA e Variantes_ Pseudocódigo.md  execution_modes.md  roadmap.md
libraries/: cost_matrix.c  cost_matrix.h  dinamicList.c  nspLib.c  nspLib.h  operators.c  operators.h  strings.c
libraries/apc/: apc.c  apc.h
libraries/hungarian/: hungarian.c  hungarian.h
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
resultados/: resuts_Constraint_1.gen_0__72019.cvs  resuts_Constraint_2.gen_1__72019.cvs
src/: main.c
src/benchmark/: benchmark.c  benchmark.h
src/core/: cost.c  cost.h  schedule.c  schedule.h  types.h
src/heuristics/: constructive.c  constructive.h  kswap.c  kswap.h  operator_registry.c  operator_registry.h  pcr.c  pcr.h  shift_relocate.c  shift_relocate.h  swap_exchange.c  swap_exchange.h  two_opt.c  two_opt.h  vnd.c  vnd.h  vns.c  vns.h
src/io/: nsp_reader.c  nsp_reader.h  result_writer.c  result_writer.h
src/solvers/: lap_solver.c  lap_solver.h
tests/: test_framework.h  test_integration.c  test_schedule.c  test_solvers.c
